--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <div class="row">
         <div class="col-lg-10 mx-auto">
           <h2>Other then coding, some of my interests are:</h2>
-          <p class="lead mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p class="lead mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor... just kidding.<br>I enjoy playing video, playing with my german shepherd, and riding motorcycles.</p>
           <a class="btn btn-dark btn-xl js-scroll-trigger" href="#goal">Goals</a>
         </div>
       </div>
@@ -79,7 +79,7 @@
         <h3 class="text-secondary mb-0">My Goal</h3>
         <h2 class="mb-5">To Learn</h2>
       </div>
-      <p class="lead mb-5">I love coding, but my passion is learning. I srtive to learn something new everyday. My goal is to work in an environment where my development skills are utilized, and learning is encouraged.</p>
+      <p class="lead mb-5">I love coding, but my passion is learning. I strive to learn something new everyday. My goal is to work in an environment where my development skills are utilized, and learning is encouraged.</p>
     </div>
   </section>
 
