--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="container text-center">
       <div class="row">
         <div class="col-lg-10 mx-auto">
-          <h2>Other then coding, some of my interests are:</h2>
+          <h2 class="mb-5">Other then coding, some of my interests are:</h2>
           <p class="lead mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor... just kidding.<br>I enjoy playing video, playing with my german shepherd, and riding motorcycles.</p>
           <a class="btn btn-dark btn-xl js-scroll-trigger" href="#goal">Goals</a>
         </div>
