--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
 
 <head>
+    <meta property="og:image" content="img/preview.jpg"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://brockthigpen.github.io/"/>
+    <meta property="og:title" content="Brock Thigpen"/>
+    <meta property="og:description" content="My Portfolio Page"/>
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
