--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta property="og:image" content="img/preview.jpg"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://brockthigpen.github.io/"/>
-    <meta property="og:title" content="Brock Thigpen"/>
-    <meta property="og:description" content="My Portfolio Page"/>
+    <meta property="og:title" content="Brock Thigpen - Portfolio."/>
+    <meta property="og:description" content="My name is Brock Thigpen, and I'm a Web Developer. This is my Portfolio page."/>
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
