added btn for pdf of resume / adjusted project 1 img size / made porject caption text transparent until hover

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 
 <head>
-    <meta property="og:image" content="img/preview.jpg"/>
-    <meta property="og:type" content="website"/>
-    <meta property="og:url" content="https://brockthigpen.github.io/"/>
-    <meta property="og:title" content="Brock Thigpen - Portfolio."/>
-    <meta property="og:description" content="My name is Brock Thigpen, and I'm a Web Developer. This is my Portfolio page."/>
+  <meta property="og:image" content="img/preview.jpg" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://brockthigpen.github.io/" />
+  <meta property="og:title" content="Brock Thigpen - Portfolio." />
+  <meta property="og:description"
+    content="My name is Brock Thigpen, and I'm a Web Developer. This is my Portfolio page." />
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -20,7 +21,8 @@
 
   <!-- Custom Fonts -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic"
+    rel="stylesheet" type="text/css">
   <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
 
   <!-- Custom CSS -->
@@ -59,7 +61,7 @@
         <em>A Web Developer</em>
         <i class="fas fa-code"></i>
       </h3>
-      <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">About Me</a>
+      <a class="btn btn-secondary btn-xl js-scroll-trigger" href="#about">About Me</a>
     </div>
     <div class="overlay"></div>
   </header>
@@ -69,9 +71,13 @@
     <div class="container text-center">
       <div class="row">
         <div class="col-lg-10 mx-auto">
-          <h2 class="mb-5">Other then coding, some of my interests are:</h2>
-          <p class="lead mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor... just kidding.<br>I enjoy playing video, playing with my german shepherd, and riding motorcycles.</p>
-          <a class="btn btn-dark btn-xl js-scroll-trigger" href="#goal">Goals</a>
+          <div class="content-section-heading">
+            <h3 class="text-secondary mb-0">ABOUT ME</h3>
+            <h2 class="mb-5">Other then coding, some of my interests are</h2>
+          </div>
+          <p class="lead mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor... just
+            kidding.<br>I enjoy playing video, playing with my german shepherd, and riding motorcycles.</p>
+          <a class="btn btn-primary btn-xl" href="img/Resume.pdf" target="blank">Resume</a>
         </div>
       </div>
     </div>
@@ -84,7 +90,8 @@
         <h3 class="text-secondary mb-0">My Goal</h3>
         <h2 class="mb-5">To Learn</h2>
       </div>
-      <p class="lead mb-5">I love coding, but my passion is learning. I strive to learn something new everyday. My goal is to work in an environment where my development skills are utilized, and learning is encouraged.</p>
+      <p class="lead mb-5">I love coding, but my passion is learning. I strive to learn something new everyday. My goal
+        is to work in an environment where my development skills are utilized, and learning is encouraged.</p>
     </div>
   </section>
 
@@ -97,14 +104,14 @@
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6">
-          <a class="portfolio-item" href="https://codepen.io/BrockT/full/QYRRZB" target="_blank">
+          <a class="portfolio-item" href="https://github.com/BrockThigpen/Feed-Me" target="_blank">
             <span class="caption">
               <span class="caption-content">
-                <h2>Tribute Page</h2>
-                <p class="mb-0">A FCC project I did to earn the Responsive Web Design Certification</p>
+                <h2>Feed Me!</h2>
+                <p class="mb-0">Finds restaurants or recipes based on the users requirements.</p>
               </span>
             </span>
-            <img class="img-fluid" src="img/portfolio-1.jpg" alt="Tribute Page Project">
+            <img class="img-fluid" src="img/feedMe.png" alt="Project: Feed Me!">
           </a>
         </div>
         <div class="col-lg-6">
@@ -147,18 +154,25 @@
   <!-- Footer -->
   <footer class="footer text-center" id="contact">
     <div class="container text-center">
-        <div class="row"></div>
-           <div class="col-lg-10 mx-auto">              
-              <h2>If you're interested in knowing more</h2>
-                <p class="lead mb-5">You can easily drop me a line!</p>
-          </div>
-        </div>
+      <div class="row"></div>
+      <div class="col-lg-10 mx-auto">
+        <h2>If you're interested in knowing more</h2>
+        <p class="lead mb-5">You can easily drop me a line!</p>
       </div>
+    </div>
+    </div>
     <div class="container">
       <ul class="list-inline mb-5">
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white mr-3" href="https://www.linkedin.com/in/brock-thigpen-04938110a/" target="_blank">
+          <a class="social-link rounded-circle text-white mr-3"
+            href="https://www.linkedin.com/in/brock-thigpen-04938110a/" target="_blank">
             <i class="icon-social-linkedin"></i>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a class="social-link rounded-circle text-white mr-3"
+            href="https://github.com/BrockThigpen" target="_blank">
+            <i class="icon-social-github"></i>
           </a>
         </li>
         <li class="list-inline-item">
