--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6">
-          <a class="portfolio-item" href="https://github.com/BrockThigpen/Feed-Me" target="_blank">
+          <a class="portfolio-item" href="https://brockthigpen.github.io/Feed-Me/." target="_blank">
             <span class="caption">
               <span class="caption-content">
                 <h2>Feed Me!</h2>
@@ -115,36 +115,36 @@
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="https://codepen.io/BrockT/full/wNbVxG" target="_blank">
+          <a class="portfolio-item" href="https://brockthigpen.github.io/Random-Password-Generator/" target="_blank">
             <span class="caption">
               <span class="caption-content">
                 <h2>Survey Form</h2>
-                <p class="mb-0">A FCC project I did to earn the Responsive Web Design Certification</p>
+                <p class="mb-0">Generates a random password based on user requirements.</p>
               </span>
             </span>
-            <img class="img-fluid" src="img/portfolio-2.jpg" alt="Survey Form Project">
+            <img class="img-fluid" src="img/pwGenerate.png" alt="Survey Form Project">
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="https://codepen.io/BrockT/full/gEbmev" target="_blank">
+          <a class="portfolio-item" href="https://brockthigpen.github.io/Daily-Planner/" target="_blank">
             <span class="caption">
               <span class="caption-content">
                 <h2>Landing Page</h2>
-                <p class="mb-0">A FCC project I did to earn the Responsive Web Design Certification</p>
+                <p class="mb-0">Allow users to schedule tasks for every hour of the workday.</p>
               </span>
             </span>
-            <img class="img-fluid" src="img/portfolio-3.jpg" alt="Landing Page Project">
+            <img class="img-fluid" src="img/dPlanner.png" alt="Landing Page Project">
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="https://codepen.io/BrockT/full/drXBpO" target="_blank">
+          <a class="portfolio-item" href="https://brockthigpen.github.io/Quiz-App/" target="_blank">
             <span class="caption">
               <span class="caption-content">
                 <h2>Documentation Page</h2>
-                <p class="mb-0">A FCC project I did to earn the Responsive Web Design Certification</p>
+                <p class="mb-0">A fun quiz to test coding knowledge.</p>
               </span>
             </span>
-            <img class="img-fluid" src="img/portfolio-4.jpg" alt="Documentation Page Project">
+            <img class="img-fluid" src="img/codeQuiz.png" alt="Documentation Page Project">
           </a>
         </div>
       </div>
@@ -170,13 +170,12 @@
           </a>
         </li>
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white mr-3"
-            href="https://github.com/BrockThigpen" target="_blank">
+          <a class="social-link rounded-circle text-white mr-3" href="https://github.com/BrockThigpen" target="_blank">
             <i class="icon-social-github"></i>
           </a>
         </li>
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white mr-3" href="mailto:brockthigpen@yahoo.com" target="_blank">
+          <a class="social-link rounded-circle text-white mr-3" href="mailto:brockthigpen@yahoo.com" target="_blank" method='post'>
             <i class="far fa-envelope"></i>
           </a>
         </li>
