added content to bio and goals section

--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@
             <h3 class="text-secondary mb-0">ABOUT ME</h3>
             <h2 class="mb-5">Other then coding, some of my interests are</h2>
           </div>
-          <p class="lead mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor... just
-            kidding.<br>I enjoy playing video, playing with my german shepherd, and riding motorcycles.</p>
+          <p class="lead mb-5">Lorem ipsum dolor sit amet... Just kidding!!</p>
+          <p class="lead mb-5">I am originally from Portland, Maine but have been living in Charlotte for about 20 years. I went to Charlotte Catholic High School, and graduated from University of North Carolina at Charlotte in 2015 with a Bachelors degree in Environmental Science.</p>
+          <p class="lead mb-5">Aside from coding some of my hobbies include playing video games, riding motorcycles, and playing with my German shepherd Rylie.</p>
           <a class="btn btn-primary btn-xl" href="img/Resume.pdf" target="blank">Resume</a>
         </div>
       </div>
@@ -90,8 +91,9 @@
         <h3 class="text-secondary mb-0">My Goal</h3>
         <h2 class="mb-5">To Learn</h2>
       </div>
-      <p class="lead mb-5">I love coding, but my passion is learning. I strive to learn something new everyday. My goal
-        is to work in an environment where my development skills are utilized, and learning is encouraged.</p>
+      <p class="lead mb-5">I love coding, but my passion is learning. I take every opportunity I can to learn something new. Whether I am a complete rookie or an expert on a given subject, I will always try to advance my knowledge and grow as a person in the process.</p>
+
+      <p class="lead mb-5">My goal is to start a career in development and continue to grow in an environment where my development skills are utilized, and learning is encouraged.</p>
     </div>
   </section>
 
