further updated og:image

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <meta property="og:image" content="https://brockthigpen.github.io/" />
+  <meta property="og:image" content="img/preview.jpg" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://brockthigpen.github.io/" />
   <meta property="og:title" content="Brock Thigpen - Portfolio." />
