added two mock projects

--- a/index.html
+++ b/index.html
@@ -149,6 +149,28 @@
             <img class="img-fluid" src="img/codeQuiz.png" alt="Documentation Page Project">
           </a>
         </div>
+        <div class="col-lg-6">
+          <a class="portfolio-item" href="https://brockthigpen.github.io/Feed-Me/." target="_blank">
+            <span class="caption">
+              <span class="caption-content">
+                <h2>Feed Me!</h2>
+                <p class="mb-0">Finds restaurants or recipes based on the users requirements.</p>
+              </span>
+            </span>
+            <img class="img-fluid" src="img/feedMe.png" alt="Project: Feed Me!">
+          </a>
+        </div>
+        <div class="col-lg-6">
+          <a class="portfolio-item" href="https://brockthigpen.github.io/Feed-Me/." target="_blank">
+            <span class="caption">
+              <span class="caption-content">
+                <h2>Feed Me!</h2>
+                <p class="mb-0">Finds restaurants or recipes based on the users requirements.</p>
+              </span>
+            </span>
+            <img class="img-fluid" src="img/feedMe.png" alt="Project: Feed Me!">
+          </a>
+        </div>
       </div>
     </div>
   </section>
