altered html to avoid nested arnchor tags

--- a/index.html
+++ b/index.html
@@ -76,8 +76,11 @@
             <h2 class="mb-5">Other then coding, some of my interests are</h2>
           </div>
           <p class="lead mb-5">Lorem ipsum dolor sit amet... Just kidding!!</p>
-          <p class="lead mb-5">I am originally from Portland, Maine but have been living in Charlotte for about 20 years. I went to Charlotte Catholic High School, and graduated from University of North Carolina at Charlotte in 2015 with a Bachelors degree in Environmental Science.</p>
-          <p class="lead mb-5">Aside from coding some of my hobbies include playing video games, riding motorcycles, and playing with my German shepherd Rylie.</p>
+          <p class="lead mb-5">I am originally from Portland, Maine but have been living in Charlotte for about 20
+            years. I went to Charlotte Catholic High School, and graduated from University of North Carolina at
+            Charlotte in 2015 with a Bachelors degree in Environmental Science.</p>
+          <p class="lead mb-5">Aside from coding some of my hobbies include playing video games, riding motorcycles, and
+            playing with my German shepherd Rylie.</p>
           <a class="btn btn-primary btn-xl" href="img/Resume.pdf" target="blank">Resume</a>
         </div>
       </div>
@@ -91,9 +94,12 @@
         <h3 class="text-secondary mb-0">My Goal</h3>
         <h2 class="mb-5">To Learn</h2>
       </div>
-      <p class="lead mb-5">I love coding, but my passion is learning. I take every opportunity I can to learn something new. Whether I am a complete rookie or an expert on a given subject, I will always try to advance my knowledge and grow as a person in the process.</p>
+      <p class="lead mb-5">I love coding, but my passion is learning. I take every opportunity I can to learn something
+        new. Whether I am a complete rookie or an expert on a given subject, I will always try to advance my knowledge
+        and grow as a person in the process.</p>
 
-      <p class="lead mb-5">My goal is to start a career in development and continue to grow in an environment where my development skills are utilized, and learning is encouraged.</p>
+      <p class="lead mb-5">My goal is to start a career in development and continue to grow in an environment where my
+        development skills are utilized, and learning is encouraged.</p>
     </div>
   </section>
 
@@ -104,72 +110,90 @@
         <h3 class="text-secondary mb-0">Portfolio</h3>
         <h2 class="mb-5">Recent Projects</h2>
       </div>
+
       <div class="row no-gutters">
         <div class="col-lg-6">
-          <a class="portfolio-item" href="https://brockthigpen.github.io/Feed-Me/." target="_blank">
+          <div class="portfolio-item" data-att="https://brockthigpen.github.io/Feed-Me/.">
             <span class="caption">
               <span class="caption-content">
                 <h2>Feed Me!</h2>
                 <p class="mb-0">Finds restaurants or recipes based on the users requirements.</p>
+                <br>
+                  <a class="inner caption-content" href="https://github.com/BrockThigpen/Feed-Me" target="blank">View repo</a>
               </span>
             </span>
             <img class="img-fluid" src="img/feedMe.png" alt="Project: Feed Me!">
-          </a>
+          </div>
         </div>
+
         <div class="col-lg-6">
-          <a class="portfolio-item" href="https://brockthigpen.github.io/Random-Password-Generator/" target="_blank">
+          <div class="portfolio-item" data-att="https://brockthigpen.github.io/Random-Password-Generator/">
             <span class="caption">
               <span class="caption-content">
-                <h2>Survey Form</h2>
+                <h2>Random Password Generator</h2>
                 <p class="mb-0">Generates a random password based on user requirements.</p>
+                <br>
+                <a class="inner caption-content" href="https://github.com/BrockThigpen/Random-Password-Generator" target="blank">View repo</a>
               </span>
             </span>
-            <img class="img-fluid" src="img/pwGenerate.png" alt="Survey Form Project">
-          </a>
+            <img class="img-fluid" src="img/pwGenerate.png" alt="Random Password Generator Project">
+          </div>
         </div>
+
         <div class="col-lg-6">
-          <a class="portfolio-item" href="https://brockthigpen.github.io/Daily-Planner/" target="_blank">
+          <div class="portfolio-item" data-att="https://brockthigpen.github.io/Daily-Planner/">
             <span class="caption">
               <span class="caption-content">
-                <h2>Landing Page</h2>
+                <h2>Day Planner</h2>
                 <p class="mb-0">Allow users to schedule tasks for every hour of the workday.</p>
+                <br>
+                <a class="inner caption-content" href="https://github.com/BrockThigpen/Daily-Planner" target="blank">View repo</a>
               </span>
             </span>
-            <img class="img-fluid" src="img/dPlanner.png" alt="Landing Page Project">
-          </a>
+            <img class="img-fluid" src="img/dPlanner.png" alt="Day Planner Project">
+          </div>
         </div>
+
         <div class="col-lg-6">
-          <a class="portfolio-item" href="https://brockthigpen.github.io/Quiz-App/" target="_blank">
+          <div class="portfolio-item" data-att="https://cryptic-chamber-77839.herokuapp.com/">
             <span class="caption">
               <span class="caption-content">
-                <h2>Documentation Page</h2>
+                <h2>All Booked</h2>
+                <p class="mb-0">A library management system.</p>
+                <br>
+                <a class="inner caption-content" href="https://github.com/BrockThigpen/All-Booked" target="blank">View repo</a>
+              </span>
+            </span>
+            <img class="img-fluid" src="img/allBooked.png" alt="Coding Quiz Project">
+          </div>
+        </div>
+
+        <div class="col-lg-6">
+          <div class="portfolio-item" data-att="https://secure-reaches-29133.herokuapp.com/notes">
+            <span class="caption">
+              <span class="caption-content">
+                <h2>Note Taker</h2>
+                <p class="mb-0">Record notes and access previous notes.</p>
+                <br>
+                <a class="inner caption-content" href="https://github.com/BrockThigpen/Note-Taker" target="blank">View repo</a>
+              </span>
+            </span>
+            <img class="img-fluid" src="img/noteTaker.png" alt="Project: Feed Me!">
+          </div>
+        </div>
+
+        <div class="col-lg-6">
+          <div class="portfolio-item" data-att="https://brockthigpen.github.io/Quiz-App/">
+            <span class="caption">
+              <span class="caption-content">
+                <h2>Coding Quiz</h2>
                 <p class="mb-0">A fun quiz to test coding knowledge.</p>
+                <br>
+                <a class="inner caption-content" href="https://github.com/BrockThigpen/Quiz-App" target="blank">View repo</a>
               </span>
             </span>
-            <img class="img-fluid" src="img/codeQuiz.png" alt="Documentation Page Project">
-          </a>
-        </div>
-        <div class="col-lg-6">
-          <a class="portfolio-item" href="https://brockthigpen.github.io/Feed-Me/." target="_blank">
-            <span class="caption">
-              <span class="caption-content">
-                <h2>Feed Me!</h2>
-                <p class="mb-0">Finds restaurants or recipes based on the users requirements.</p>
-              </span>
-            </span>
-            <img class="img-fluid" src="img/feedMe.png" alt="Project: Feed Me!">
-          </a>
-        </div>
-        <div class="col-lg-6">
-          <a class="portfolio-item" href="https://brockthigpen.github.io/Feed-Me/." target="_blank">
-            <span class="caption">
-              <span class="caption-content">
-                <h2>Feed Me!</h2>
-                <p class="mb-0">Finds restaurants or recipes based on the users requirements.</p>
-              </span>
-            </span>
-            <img class="img-fluid" src="img/feedMe.png" alt="Project: Feed Me!">
-          </a>
+            <img class="img-fluid" src="img/codeQuiz.png" alt="Project: Feed Me!">
+          </div>
         </div>
       </div>
     </div>
@@ -199,7 +223,8 @@
           </a>
         </li>
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white mr-3" href="mailto:brockthigpen@yahoo.com" target="_blank" method='post'>
+          <a class="social-link rounded-circle text-white mr-3" href="mailto:brockthigpen@yahoo.com" target="_blank"
+            method='post'>
             <i class="far fa-envelope"></i>
           </a>
         </li>
