changed the href for noteTaker project

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         </div>
 
         <div class="col-lg-6">
-          <div class="portfolio-item" data-att="https://secure-reaches-29133.herokuapp.com/notes">
+          <div class="portfolio-item" data-att="https://secure-reaches-29133.herokuapp.com/">
             <span class="caption">
               <span class="caption-content">
                 <h2>Note Taker</h2>
